chore: fix line-clamp issue on ios

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -120,14 +120,6 @@ body {
 }
 /* carousel style overrides end*/
 
-.post-description {
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  -webkit-line-clamp: 2;
-  line-clamp: 2;
-}
-
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
